nginx/g3-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: g3-ing
spec:
  rules:
  - host: g3.apps.skb.kr
    http:
      paths:
      - backend:
          serviceName: api-svc
          servicePort: 3001
        path: /api
      - backend:
          serviceName: nginx-cache-svc
          servicePort: 80
        path: /js
      - backend:
          serviceName: nginx-cache-svc
          servicePort: 80
        path: /css
      - backend:
          serviceName: nginx-cache-svc
          servicePort: 80
        path: /img
      - backend:
          serviceName: bff-svc
          servicePort: 3000
        path: /
---
